--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,15 @@ language: android
 jdk: oraclejdk7
 env:
   matrix:
-    - ANDROID_TARGET=android-15  ANDROID_ABI=armeabi-v7a
+    - ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
 
 android:
   components:
-    - build-tools-15.0.0
+    - build-tools-19.0.0
 
-    # Gradle
-    - wget http://services.gradle.org/distributions/gradle-1.6-bin.zip
-    - unzip gradle-1.6-bin.zip
-    - export GRADLE_HOME=$PWD/gradle-1.6
-    - export PATH=$GRADLE_HOME/bin:$PATH
-
-
+before_script:
+  # Create and start emulator
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - adb wait-for-device
+  - adb shell input keyevent 82 &
