--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.2'
@@ -9,10 +9,5 @@ buildscript {
 
 }
 
-allprojects {
-    repositories {
-        jcenter()
-    }
-}
 
 
