--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: android
 
-jdk:
-  - openjdk7
+jdk: oraclejdk7
 
-# newer version of gradle
-  - wget http://services.gradle.org/distributions/gradle-1.11-bin.zip
-  - unzip -qq gradle-1.11-bin.zip
-  - export GRADLE_HOME=$PWD/gradle-1.11
-  - export PATH=$GRADLE_HOME/bin:$PATH
+# Gradle
+- wget http://services.gradle.org/distributions/gradle-1.6-bin.zip
+- unzip gradle-1.6-bin.zip
+- export GRADLE_HOME=$PWD/gradle-1.6
+- export PATH=$GRADLE_HOME/bin:$PATH
 
   # just to test gradle version, against our provided one
   - gradle -v
