--- a/local.properties
+++ b/local.properties
@@ -4,4 +4,4 @@
 # Location of the SDK. This is only used by Gradle.
 #
 #Sun Oct 26 09:11:12 WET 2014
-sdk.dir=/Users/pedro/Downloads/adt-bundle-mac-x86_64-20140624/sdk
+##sdk.dir=/Users/pedro/Downloads/adt-bundle-mac-x86_64-20140624/sdk
