--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ jdk: oraclejdk7
 
 before_install:
  # Create and start emulator
- - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+ - echo no | android create avd --force -n test -t 17
  - emulator -avd test -no-skin -no-audio -no-window &
