--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,17 @@ android:
 
 jdk: oraclejdk7
 
+env:
+  matrix:
+    - ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
+
+
 
 before_install:
  # Create and start emulator
- - echo no | android create avd --force -n test -t 17
- - emulator -avd test -no-skin -no-audio -no-window &
+ before_script:
+   # Create and start emulator
+   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+   - emulator -avd test -no-skin -no-audio -no-window &
+   - adb wait-for-device
+   - adb shell input keyevent 82 &
