--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile files('libs/jackson-annotations-2.4.0.jar')
     compile files('libs/jackson-core-2.4.1.1.jar')
     compile files('libs/jackson-databind-2.2.4.jar')
+    compile files('libs/robotium-solo-5.2.1.jar')
 }
 
 
