--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:noHistory="true" >
             <intent-filter>
@@ -29,35 +29,35 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainMenuActivity"
+            android:name=".activities.MainMenuActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".DetailsActivity"
+            android:name=".activities.DetailsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:parentActivityName=".MainMenuActivity" >
+            android:parentActivityName=".activities.MainMenuActivity" >
         </activity>
         <activity
-            android:name=".DocumentsDetailsActivity"
+            android:name=".activities.DocumentsDetailsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:parentActivityName=".DetailsActivity" >
+            android:parentActivityName=".activities.DetailsActivity" >
         </activity>
         <activity
-            android:name=".AbstractDescriptionActivity"
+            android:name=".activities.AbstractDescriptionActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".DocumentsDetailsActivity" >
+            android:parentActivityName=".activities.DocumentsDetailsActivity" >
         </activity>
         <activity
-            android:name=".AboutActivity"
+            android:name=".activities.AboutActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".MainMenuActivity" >
+            android:parentActivityName=".activities.MainMenuActivity" >
         </activity>
         <activity
-            android:name=".ReadersActivity"
+            android:name=".activities.ReadersActivity"
             android:label="@string/app_name" 
-            android:parentActivityName=".DocumentsDetailsActivity" >
+            android:parentActivityName=".activities.DocumentsDetailsActivity" >
         </activity>
 
         <provider
