--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Oct 27 21:48:17 WET 2014
-sdk.dir=/Users/pedro/Downloads/adt-bundle-mac-x86_64-20140624/sdk
+#sdk.dir=/Users/pedro/Downloads/adt-bundle-mac-x86_64-20140624/sdk
