--- a/app/local.properties
+++ b/app/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Oct 26 14:27:13 WET 2014
-sdk.dir=/Users/pedro/Downloads/adt-bundle-mac-x86_64-20140624/sdk
+#sdk.dir=/Users/pedro/Downloads/adt-bundle-mac-x86_64-20140624/sdk
