--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 06 18:27:30 WET 2014
-s#dk.dir=/Users/pedro/Downloads/adt-bundle-mac-x86_64-20140624/sdk
+#Sun Nov 09 08:45:58 WET 2014
+#sdk.dir=/Users/pedro/Downloads/adt-bundle-mac-x86_64-20140624/sdk
