--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/paper_reader_512_512"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.mendeleypaperreader.activities.MainActivity"
             android:label="@string/app_name"
             android:noHistory="true" >
             <intent-filter>
@@ -29,43 +31,46 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.MainMenuActivity"
+            android:name="com.mendeleypaperreader.activities.MainMenuActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".activities.DetailsActivity"
+            android:name="com.mendeleypaperreader.activities.DetailsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:parentActivityName=".activities.MainMenuActivity" >
+            android:parentActivityName="com.mendeleypaperreader.activities.MainMenuActivity" >
         </activity>
         <activity
-            android:name=".activities.DocumentsDetailsActivity"
+            android:name="com.mendeleypaperreader.activities.DocumentsDetailsActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:parentActivityName=".activities.DetailsActivity" >
+            android:parentActivityName="com.mendeleypaperreader.activities.DetailsActivity" >
         </activity>
         <activity
-            android:name=".activities.AbstractDescriptionActivity"
+            android:name="com.mendeleypaperreader.activities.AbstractDescriptionActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".activities.DocumentsDetailsActivity" >
+            android:parentActivityName="com.mendeleypaperreader.activities.DocumentsDetailsActivity" >
         </activity>
         <activity
-            android:name=".activities.AboutActivity"
+            android:name="com.mendeleypaperreader.activities.AboutActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".activities.MainMenuActivity" >
+            android:parentActivityName="com.mendeleypaperreader.activities.MainMenuActivity" >
         </activity>
         <activity
-            android:name=".activities.ReadersActivity"
-            android:label="@string/app_name" 
-            android:parentActivityName=".activities.DocumentsDetailsActivity" >
+            android:name="com.mendeleypaperreader.activities.ReadersActivity"
+            android:label="@string/app_name"
+            android:parentActivityName="com.mendeleypaperreader.activities.DocumentsDetailsActivity" >
         </activity>
-
+        <activity
+            android:name="com.mendeleypaperreader.activities.DocTagsActivity"
+            android:label="@string/app_name"
+            android:parentActivityName="com.mendeleypaperreader.activities.DocumentsDetailsActivity" >
+        </activity>
         <provider
             android:name="com.mendeleypaperreader.contentProvider.MyContentProvider"
             android:authorities="com.android.mendeleypaperreader.utl.MyContentProvider"
             android:exported="false" />
 
-        
     </application>
 
 </manifest>
