--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 09 21:33:56 WET 2014
-#sdk.dir=/Users/pedro/Documents/Android SDK/sdk
+#Tue Dec 16 23:03:35 WET 2014
+sdk.dir=/Users/pedro/Documents/Android SDK/sdk
