Continuous integration with calabash test

--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Dec 18 20:48:39 WET 2014
-sdk.dir=/Users/pedro/Documents/Android SDK/sdk
+#sdk.dir=/Users/pedro/Documents/Android SDK/sdk
