--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,15 @@ deploy:
     all_branches: true
 
 before_install:
-   -gem install calabash-android
+   - gem install calabash-android
    - gem install calabash-cucumber
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
    - emulator -avd test -no-skin -no-audio -no-window &
    - adb wait-for-device
    - adb shell input keyevent 82 &
+
+
+script:
+
+  - calabash-android run bin/Dashboard-debug.apk -v
