--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,5 @@ before_install:
 
 script:
 
-  - calabash-android run app/build/outputs/apk/app-debug-unaligned.apk
+  - adb install app/src/calabash/test/features/app-debug-unaligned.apk
+  - calabash-android run app/src/calabash/test/features/app-debug-unaligned.apk -v
