--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,4 @@ before_install:
 script:
 
   - adb install app/src/calabash/test/features/app-debug-unaligned.apk
-  - calabash-android run app/src/calabash/test/features/app-debug-unaligned.apk -v
+  - calabash-android run app/src/calabash/test/features/app-debug-unaligned.apk
