--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,6 @@ before_install:
 
 script:
 
-
+  - calabash-android resign app/src/calabash/test/features/app-debug-unaligned.apk
+  calabash-android build app/src/calabash/test/features/app-debug-unaligned.apk
   - calabash-android run app/src/calabash/test/features/app-debug-unaligned.apk
