Continuous integration with calabash test

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ before_install:
 script:
 
   - calabash-android resign app/src/calabash/test/features/app-debug-unaligned.apk
-  calabash-android build app/src/calabash/test/features/app-debug-unaligned.apk
+  - calabash-android build app/src/calabash/test/features/app-debug-unaligned.apk
   - calabash-android run app/src/calabash/test/features/app-debug-unaligned.apk
