--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,19 @@ deploy:
 before_install:
    - gem install calabash-android
    - gem install calabash-cucumber
+   -
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
    - emulator -avd test -no-skin -no-audio -no-window &
    - adb wait-for-device
    #- adb shell input keyevent 82 &
 
+
+before_script:
+  # Make sure the emulator has started before running tests
+  - chmod +x gradlew
+  - chmod +x wait_for_emulator
+  - ./wait_for_emulator
 
 script:
 
