--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ deploy:
     before_script:
        - gem install calabash-android
        - gem install calabash-cucumber
+       - gem pry
        - gem install travis-artifacts
 
 
