--- a/.travis.yml
+++ b/.travis.yml
@@ -15,44 +15,9 @@ env:
 
 
 
-    before_script:
-       - gem install calabash-android
-       - gem install calabash-cucumber
-       - gem pry
-       - gem install travis-artifacts
-
-
 before_install:
-
-   # Install base Android SDK
-     - chmod +x gradlew
-     - sudo apt-get update -qq
-     - if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch > /dev/null; fi
-     - wget http://dl.google.com/android/android-sdk_r$ANDROID_SDK_TOOLS_VERSION-linux.tgz
-     - tar xzf android-sdk_r$ANDROID_SDK_TOOLS_VERSION-linux.tgz
-     - export ANDROID_HOME=$PWD/android-sdk-linux
-     - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
-
-
-     # Install Android SDK components
-     - echo y | android update sdk --filter tools --no-ui --force > /dev/null
-     - echo y | android update sdk --filter platform-tools --no-ui --force > /dev/null
-     - echo y | android update sdk --all --filter build-tools-$ANDROID_BUILD_TOOLS_VERSION --no-ui --force > /dev/null
-     - echo y | android update sdk --filter android-$ANDROID_API_LEVEL --no-ui --force > /dev/null
-     - echo y | android update sdk --filter sysimg-$ANDROID_API_LEVEL --no-ui --force > /dev/null
-     - echo y | android update sdk --filter extra-android-support --no-ui --force > /dev/null
-     - echo y | android update sdk --filter extra-android-m2repository --no-ui --force > /dev/null
-
-    # Create and start emulator
-    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-    - emulator -avd test -no-skin -no-audio -no-window &
-
-
-before_script:
-  # Make sure the emulator has started before running tests
-  - chmod +x gradlew
-  - chmod +x wait_for_emulator
-  - ./wait_for_emulator
-
-script:
-  - TERM=dumb ./gradlew clean build calabashDebug
+   # Create and start emulator
+   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+   - emulator -avd test -no-skin -no-audio -no-window &
+   - adb wait-for-device
+   -
