--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Dec 26 17:12:55 WET 2014
-sdk.dir=/Users/pedro/Documents/Android SDK/sdk
+#sdk.dir=/Users/pedro/Documents/Android SDK/sdk
