--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ env:
 
 
 before_install:
+
+   - gem install calabash-android
+   - gem install calabash-cucumber
+   - gem install travis-artifacts
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
    - emulator -avd test -no-skin -no-audio -no-window &
