--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,17 @@ before_install:
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
    - emulator -avd test -no-skin -no-audio -no-window &
-   - adb wait-for-device
+   #- adb wait-for-device
 
 
+install:
+  - TERM=dumb ./gradlew assemble
+
+before_script:
+  # Make sure the emulator has started before running tests
+  - chmod +x gradlew
+  - chmod +x wait_for_emulator
+  - ./wait_for_emulator
+
+script:
+  - TERM=dumb ./gradlew clean build calabashDebug
