--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 26 17:12:55 WET 2014
-#sdk.dir=/Users/pedro/Documents/Android SDK/sdk
+#Fri Dec 26 18:04:32 WET 2014
+sdk.dir=/Users/pedro/Documents/Android SDK/sdk
