--- a/.travis.yml
+++ b/.travis.yml
@@ -16,20 +16,21 @@ env:
 
 
 before_install:
-
+ - gem install calabash-android
+   - gem install calabash-cucumber
+   - gem install travis-artifacts
 
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
    - emulator -avd test -no-skin -no-audio -no-window &
+   - sleep 45
 
 
 install:
   - TERM=dumb ./gradlew assemble
 
 before_script:
-    - gem install calabash-android
-   - gem install calabash-cucumber
-   - gem install travis-artifacts
+
   # Make sure the emulator has started before running tests
   - chmod +x gradlew
   - chmod +x wait_for_emulator
