Continuous integration with calabash  test

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,4 @@ before_script:
   - ./wait_for_emulator
 
 script:
-  - TERM=dumb ./gradlew clean build calabashDebug
+  - TERM=dumb ./gradlew clean build connectedCheck
