--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,5 @@ before_script:
   - ./wait_for_emulator
 
 script:
-  - TERM=dumb ./gradlew clean build calabashDebug
+  #- TERM=dumb ./gradlew clean build calabashDebug
+  - ./gradlew clean build calabashDebug
