Continuous integration with calabash  test

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,5 @@ before_script:
 
 script:
   #- TERM=dumb ./gradlew clean build calabashDebug
-  - ./gradlew clean build calabashDebug
+  #- ./gradlew clean build calabashDebug
+  - calabash-android run features/app-debug-unaligned.apk
