--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,9 @@ before_script:
   - ./wait_for_emulator
 
 script:
-  - TERM=dumb ./gradlew clean build connectedAndroidTest
+  #- TERM=dumb ./gradlew clean build connectedAndroidTest
   #- ./gradlew clean build calabashDebug
   #- adb install -r features/app-debug-unaligned.apk
-  #- calabash-android run features/app-debug-unaligned.apk
+  - Calabash-android resign features/app-debug-unaligned.apk
+  - Calabash-android build features/app-debug-unaligned.apk
+  - calabash-android run features/app-debug-unaligned.apk
