--- a/.travis.yml
+++ b/.travis.yml
@@ -19,21 +19,19 @@ before_install:
 
    - gem install calabash-android
    - gem install calabash-cucumber
-   - gem install travis-artifacts
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
    - emulator -avd test -no-skin -no-audio -no-window &
    - sleep 45
 
 
-install:
-  - TERM=dumb ./gradlew assemble
+
 
 before_script:
   # Make sure the emulator has started before running tests
-  - chmod +x gradlew
-  - chmod +x wait_for_emulator
-  - ./wait_for_emulator
+
+ # - chmod +x wait_for_emulator
+ # - ./wait_for_emulator
 
 script:
   #- TERM=dumb ./gradlew clean build connectedAndroidTest
