--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ before_install:
    #- sleep 45
 
 
-
+install:
+  - TERM=dumb ./gradlew assemble
 
 before_script:
   # Make sure the emulator has started before running tests
