--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,11 @@ before_install:
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
    - emulator -avd test -no-skin -no-audio -no-window &
+   - chmod +x wait_for_emulator
+    - ./wait_for_emulator
 
-
+cache:
+  - apt
 
 install:
   - TERM=dumb ./gradlew assemble
@@ -31,8 +34,8 @@ install:
 before_script:
   # Make sure the emulator has started before running tests
 
- - chmod +x wait_for_emulator
- - ./wait_for_emulator
+ #- chmod +x wait_for_emulator
+ #- ./wait_for_emulator
 
 script:
   - calabash-android resign features/bin/app-debug-unaligned.apk
