--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,13 @@ before_install:
    - gem install calabash-cucumber
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-   - emulator -avd test -no-skin -no-audio -no-window &
+   #- emulator -avd test -no-skin -no-audio -no-window &
 
 cache:
   - apt
 
 install:
-  - TERM=dumb ./gradlew assemble
+  #- TERM=dumb ./gradlew assemble
 
 before_script:
   # Make sure the emulator has started before running tests
