--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,8 @@ install:
 
 before_script:
   # Make sure the emulator has started before running tests
-  #- chmod +x wait_for_emulator
-  #- ./wait_for_emulator
+  - chmod +x wait_for_emulator
+  - ./wait_for_emulator
 
 
 script:
