--- a/.travis.yml
+++ b/.travis.yml
@@ -38,4 +38,4 @@ before_script:
 script:
   - calabash-android resign features/bin/app-debug-unaligned.apk
   - calabash-android build features/bin/app-debug-unaligned.apk
-  - calabash-android run features/bin/app-debug-unaligned.apk
+  - travis_wait calabash-android run features/bin/app-debug-unaligned.apk
