--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ cache:
   - apt
 
 install:
-  #- TERM=dumb ./gradlew assemble
+  - TERM=dumb ./gradlew assemble
 
 before_script:
   # Make sure the emulator has started before running tests
