--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ android:
   components:
     - tools
     - android-19
-    - extra-android-support
-    - extra-android-m2repository
+    #- extra-android-support
+    #- extra-android-m2repository
 
 jdk: oraclejdk7
 
