--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ env:
 
 before_install:
 
-   - gem install calabash-android
-   - gem install calabash-cucumber
+   
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
    - emulator -avd test -no-skin -no-audio -no-window &
@@ -27,15 +26,25 @@ cache:
   - apt
 
 install:
+  - echo no | android create avd -n emulator -t android-19 --skin WVGA800 --force --abi armeabi-v7a
   - TERM=dumb ./gradlew assemble
+  - gem install calabash-android
+  - gem install calabash-cucumber
 
 before_script:
    # Make sure the emulator has started before running tests
-  - chmod +x wait_for_emulator
-  - ./wait_for_emulator
+ sh -e /etc/init.d/xvfb start
+ sleep 3 
+ # give xvfb some time to start 
+ emulator -avd emulator -prop persist.sys.language=en -prop persist.sys.country=US -noaudio -no-boot-anim &
+ sleep 45
 
 
 script:
-  - calabash-android resign features/bin/app-debug-unaligned.apk
-  - calabash-android build features/bin/app-debug-unaligned.apk
+    adb kill-server
+    adb start-server
+    adb devices
+  #- calabash-android resign features/bin/app-debug-unaligned.apk
+  #- calabash-android build features/bin/app-debug-unaligned.apk
+  adb install -r features/bin/app-debug-unaligned.apk
   - travis_wait calabash-android run features/bin/app-debug-unaligned.apk
