--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: android
 
 android:
   components:
-    - tools
-    - android-19
+    #- tools
+    #- android-19
+    - sys-img-armeabi-v7a-android-19
+    - build-tools-20.0.0
     #- extra-android-support
     #- extra-android-m2repository
 
@@ -17,25 +19,30 @@ env:
 
 before_install:
 
-   
+   - gem install calabash-android
+   - gem install calabash-cucumber
    # Create and start emulator
    - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-   - emulator -avd test -no-skin -no-audio -no-window &
+     - emulator -avd test -no-skin -no-audio -no-window &
+     - android-wait-for-emulator
+     - adb shell input keyevent 82 &
 
 cache:
   - apt
 
 install:
 
-  - TERM=dumb ./gradlew assemble
+ # - TERM=dumb ./gradlew assemble
 
 before_script:
    # Make sure the emulator has started before running tests
-  - chmod +x wait_for_emulator
-  - ./wait_for_emulator
+ # - chmod +x wait_for_emulator
+ # - ./wait_for_emulator
 
 
 script:
+  - ./gradlew connectedCheck --info
+  - ./gradlew build
   - calabash-android resign features/bin/app-debug-unaligned.apk
-  - calabash-android build features/bin/app-debug-unaligned.apk
+  #- calabash-android build features/bin/app-debug-unaligned.apk
   - travis_wait calabash-android run features/bin/app-debug-unaligned.apk
