--- a/.travis.yml
+++ b/.travis.yml
@@ -18,27 +18,11 @@ env:
 
 
 before_install:
-
-   - gem install calabash-android
-   - gem install calabash-cucumber
-   # Create and start emulator
-   - "export DISPLAY=:99.0"
-     - "sh -e /etc/init.d/xvfb start"
-     # give xvfb some time to start
-     - sleep 3
-     - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
-     # check emulator config
-     - cat /home/travis/.android/avd/test.avd/config.ini
-     # change HEAP size
-     #BinhNT6509 comment
-     #- python /home/travis/build/Nikkei/dive_android/calabash/CalabashConfigEmulator.py
-      # check emulator config
-     - cat /home/travis/.android/avd/test.avd/config.ini
-     - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
-     - android-wait-for-emulator
-     - adb shell input keyevent 82 &
-     - sleep 45
-
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - gem install calabash-android
+  - gem install cucumber
+  
 cache:
   - apt
 
@@ -47,12 +31,17 @@ install:
  # - TERM=dumb ./gradlew assemble
 
 before_script:
-   # Make sure the emulator has started before running tests
- # - chmod +x wait_for_emulator
- # - ./wait_for_emulator
+  - chmod +x wait_for_emulator.sh
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 45
+  - ./wait_for_emulator.sh
+  - adb shell input keyevent 82 &
 
 
 script:
+  - adb start-server
+  - adb devices
   - ./gradlew connectedCheck --info
   - ./gradlew build
   - calabash-android resign features/bin/app-debug-unaligned.apk
