--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 45
-  - ./wait_for_emulator.sh
+  - chmod +x wait_for_emulator
+  - ./wait_for_emulator
   - adb shell input keyevent 82 &
 
 
