--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,8 @@ language: android
 
 android:
   components:
-    #- tools
-    #- android-19
     - sys-img-armeabi-v7a-android-19
     - build-tools-20.0.0
-    #- extra-android-support
-    #- extra-android-m2repository
 
 jdk: oraclejdk7
 
@@ -26,9 +22,6 @@ before_install:
 cache:
   - apt
 
-install:
-
- # - TERM=dumb ./gradlew assemble
 
 before_script:
   - chmod +x wait_for_emulator
@@ -43,8 +36,9 @@ before_script:
 script:
   - adb start-server
   - adb devices
-  #- ./gradlew connectedCheck --info
   - ./gradlew build
-  - calabash-android resign features/bin/app-debug-unaligned.apk
+  #- calabash-android resign features/bin/app-debug-unaligned.apk
   #- calabash-android build features/bin/app-debug-unaligned.apk
-  - calabash-android run features/bin/app-debug-unaligned.apk
+  #- calabash-android run features/bin/app-debug-unaligned.apk
+  - calabash-android resign app/build/outputs/apk/app-release-unsigned.apk
+  - calabash-android run app/build/outputs/apk/app-release-unsigned.apk
