--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ env:
 
 
 
-before_install:
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
+#before_install:
+ # - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  #- emulator -avd test -no-skin -no-audio -no-window &
   #- gem install calabash-android
   
 cache:
@@ -28,8 +28,9 @@ before_script:
     - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
     - mksdcard 265M sdcard
     - emulator -avd test -no-audio -no-boot-anim -sdcard sdcard &
-    - chmod +x wait_for_emulator
-    - ./wait_for_emulator
+    #- chmod +x wait_for_emulator
+    #- ./wait_for_emulator
+    - android-wait-for-emulator
     - adb shell input keyevent 82
     - sleep 20
 
