--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0-rc2'
@@ -11,6 +13,8 @@ buildscript {
 
 
 }
-
-
-
+allprojects {
+    repositories {
+        jcenter()
+    }
+}
