--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,15 @@
         android:icon="@drawable/paper_reader_512_512"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <receiver android:name="com.mendeleypaperreader.service.NetworkChangeReceiver"
+            android:label="NetworkChangeReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE">
+                    <action android:name="android.net.wifi.WIFI_STATE_CHANGED">
+                    </action></action></intent-filter>
+        </receiver>
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.LoginActivity"
             android:label="@string/app_name"
             android:noHistory="true"
             android:theme="@android:style/Theme.NoTitleBar">>
@@ -91,13 +98,19 @@
 
         <!--Provider declared in manifest -->
         <provider
-            android:name=".contentProvider.MyContentProvider"
+            android:name=".Provider.ContentProvider"
             android:authorities="com.android.mendeleypaperreader.utl.MyContentProvider"
             android:exported="false" />
 
-        <!--Service declared in manifest -->
-        <service android:name="com.mendeleypaperreader.ServiceProvider.DataService"
-            />
+
+        <service
+            android:name="com.mendeleypaperreader.service.ServiceIntent"
+            android:exported="false"/>
+
+        <service
+            android:name="com.mendeleypaperreader.service.ServiceSync"
+            android:exported="false"/>
+
 
 
     </application>
