--- a/.travis.yml
+++ b/.travis.yml
@@ -25,14 +25,15 @@ before_script:
     - emulator -avd test -no-audio -no-boot-anim -sdcard sdcard &
     - android-wait-for-emulator
     - adb shell input keyevent 82
-    - sleep 20
+   # - sleep 20
 
 
 
 script:
 
+  - adb start-server
   - adb devices
-  - ./gradlew connectedCheck --info
+ # - ./gradlew connectedCheck --info
   - ./gradlew build
   - calabash-android resign app/build/outputs/apk/app-release-unsigned.apk
   - calabash-android run app/build/outputs/apk/app-release-unsigned.apk
