--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.0.0'
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.daimajia.numberprogressbar:library:1.2@aar'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile files('libs/jackson-annotations-2.4.0.jar')
     compile files('libs/jackson-core-2.4.1.1.jar')
     compile files('libs/jackson-databind-2.2.4.jar')
     compile files('libs/robotium-solo-5.2.1.jar')
+    compile files('libs/joda-time-2.7.jar')
 }
 
 calabashTest {
